Sect-1.3 problems solved

--- a/Chapter 1 - Just enouth category theory to be dangerous.tex
+++ b/Chapter 1 - Just enouth category theory to be dangerous.tex
@@ -616,4 +616,43 @@ Y \arrow[r]                                                 & Y\times_ZY
 	\qed
 \end{exercise}
 
+\begin{exercise}
+	$$
+	\begin{tikzcd}
+(a_i)_{i\in \mathscr{I}} \arrow[d] \arrow[rd] &     \\
+A_j \arrow[r]                       & A_k
+\end{tikzcd}
+	$$ 
+	Because from the definition of $(a_{i})_{i\in \mathscr{I}}$, we have
+	$$
+	F(m)(a_{j})=a_{k}
+	$$ 
+	So $(a_{i})_{i\in \mathscr{I}}A\longrightarrow A_{j}\longrightarrow A_{k}$ is commutative with $(a_{i})_{i\in \mathscr{I}}\longrightarrow A_{k}$.
+	\qed
+\end{exercise}
+
+\begin{exercise}
+	\leavevmode \vspace{-\baselineskip}
+	\begin{enumerate}
+		\item It means fractions converting into different denominators stands for the same rational number, which is obviously true.
+		\item Because we can view the set category as posets, where morphisms in between two objects are unique.
+	\end{enumerate}
+\end{exercise}
+
+\begin{exercise}
+	The proof is done by definition.
+\end{exercise}
+
+\begin{exercise}
+	\emph{(I suppose it's trivial, skipped.)}
+\end{exercise}
+
+\begin{exercise}
+	\emph{(The proof is similar to \textbf{1.3.D} I'll skip.)}
+\end{exercise}
+
+\begin{exercise}
+	
+\end{exercise}
+
 \end{document}
